# River_Computer

./: README.md  app.py  generic_oracle.py  main.py  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: WalletBalance.tsx  WalletConnect.tsx
